minitrace-macro/tests/ui/err/has-name-and-full-path.stderr
error: `name` and `full_path` can not be used together
 --> tests/ui/err/has-name-and-full-path.rs:3:1
  |
3 | #[trace(name = "Name", full_path = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
