minitrace-macro/tests/ui/err/has-name-and-full-path.rs
use minitrace::trace;

#[trace(name = "Name", full_path = true)]
fn f() {}

fn main() {}
